--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.6",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
